[gd_scene load_steps=3 format=2]

[ext_resource path="res://tiles/TileContainer.gd" type="Script" id=1]
[ext_resource path="res://tiles/SimpleTile.tscn" type="PackedScene" id=2]

[node name="TileContainer" type="Node2D"]
script = ExtResource( 1 )
tile_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 288.0
margin_bottom = 288.0
color = Color( 1, 1, 1, 0.454902 )

[node name="Container" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LineRect" type="ColorRect" parent="."]
visible = false
margin_left = 89.0
margin_top = 145.0
margin_right = 137.0
margin_bottom = 193.0
color = Color( 0, 0.156863, 0.627451, 0.831373 )

[node name="MistakeRect" type="ColorRect" parent="."]
visible = false
margin_right = 288.0
margin_bottom = 288.0
color = Color( 1, 0, 0, 0.219608 )

[node name="LineTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MistakeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="LineTimer" to="." method="_on_LineTimer_timeout"]
[connection signal="timeout" from="MistakeTimer" to="." method="_on_MistakeTimer_timeout"]
